[gd_scene load_steps=22 format=2]

[ext_resource path="res://fase_ensinomedio/classe.png" type="Texture" id=1]
[ext_resource path="res://chao/chao.tres" type="TileSet" id=2]
[ext_resource path="res://personagem_masc_novo/vitor_novo_andando_4- Transparente.png" type="Texture" id=3]
[ext_resource path="res://personagem_masc_novo/vitor_novo_andando_1- Transparente.png" type="Texture" id=4]
[ext_resource path="res://menu/Seguinte.png" type="Texture" id=5]
[ext_resource path="res://personagem_masc_novo/vitor_novo_andando_2- Transparente.png" type="Texture" id=6]
[ext_resource path="res://personagem_masc_novo/vitor_novo_andando_3- Transparente.png" type="Texture" id=7]
[ext_resource path="res://personagem_masc_novo/vitor_novo_andando_5- Transparente.png" type="Texture" id=8]
[ext_resource path="res://personagem_masc_novo/vitor_novo_andando_7- Transparente.png" type="Texture" id=9]
[ext_resource path="res://fase_ensinomedio/jonny_falando2.png" type="Texture" id=10]
[ext_resource path="res://fase_ensinomedio/fala_jonny_escola.png" type="Texture" id=11]
[ext_resource path="res://personagem_masc_novo/vitor_novo_andando_6- Transparente.png" type="Texture" id=12]
[ext_resource path="res://fase_ensinomedio/jonny_falando.png" type="Texture" id=13]
[ext_resource path="res://cenas_node/andando_jovem_escola.gd" type="Script" id=14]
[ext_resource path="res://cenas_node/seguinte_festa.gd" type="Script" id=15]
[ext_resource path="res://chao/floor.png" type="Texture" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 41, 325 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 101, 321 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 9 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 52.5, 200.5 )

[node name="Node2D" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0 )

[node name="wall" type="StaticBody2D" parent="."]
position = Vector2( 0, 16 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="wall"]
position = Vector2( -16, 304 )
scale = Vector2( 0.833333, 10.5 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall"]
position = Vector2( 24, 320 )
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
position = Vector2( 1712, 304 )
scale = Vector2( 1, 10.5 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1712, 304 )
shape = SubResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = 1296.0
margin_top = 440.0
margin_right = 1520.0
margin_bottom = 512.0
script = ExtResource( 15 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button"]
position = Vector2( 110.25, 35.5 )
scale = Vector2( 0.695588, 0.875 )
texture = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1171, 400 )
scale = Vector2( 0.546709, 0.509604 )
frames = SubResource( 5 )
playing = true
flip_h = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1344, 200 )
scale = Vector2( 0.384444, 0.42 )
texture = ExtResource( 11 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( -168, -8 )
script = ExtResource( 14 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="KinematicBody2D"]
position = Vector2( 504, 416 )
scale = Vector2( 0.813177, 0.678481 )
frames = SubResource( 6 )
animation = "walking"

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 496, 432 )
shape = SubResource( 7 )

[node name="Camera2D" type="Camera2D" parent="KinematicBody2D"]
position = Vector2( 168, 56 )
anchor_mode = 0
current = true
zoom = Vector2( 0.9, 0.9 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 832, 304 )
scale = Vector2( 1.101, 1.21008 )
texture = ExtResource( 1 )

[connection signal="mouse_entered" from="Button" to="Button" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="Button" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="Button" method="_on_Button_pressed"]
